--- a/benchmark/Project.toml
+++ b/benchmark/Project.toml
@@ -4,9 +4,11 @@ Arrow = "69666777-d1a9-59fb-9406-91d4454c9d45"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 BusinessDays = "4f18b42c-503e-5345-9536-bb0f25fc7038"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+Cthulhu = "f68482b8-f384-11e8-15f7-abe071a5a75f"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 ODBC = "be6f12e9-ca4f-5eb2-a339-a4f995cc0291"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 WRDSMerger = "59d27aa3-834e-4232-9046-52ef43e86786"
