iterate market data

--- a/benchmark/Project.toml
+++ b/benchmark/Project.toml
@@ -11,4 +11,5 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 ODBC = "be6f12e9-ca4f-5eb2-a339-a4f995cc0291"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+Traceur = "37b6cedf-1f77-55f8-9503-c64b63398394"
 WRDSMerger = "59d27aa3-834e-4232-9046-52ef43e86786"
