--- a/Project.toml
+++ b/Project.toml
@@ -28,6 +28,7 @@ StatsBase = "0.33"
 julia = "1.6"
 StatsModels = "0.6"
 Tables = "1.7"
+Reexport = "1"
 
 [extras]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
