--- a/benchmark/Project.toml
+++ b/benchmark/Project.toml
@@ -9,6 +9,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
+InMemoryDatasets = "5c01b14b-ab03-46ff-b164-14c663efdd9f"
 IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 ODBC = "be6f12e9-ca4f-5eb2-a339-a4f995cc0291"
 Parsers = "69de0a69-1ddd-5017-9359-2bf0b02dc9f0"
