try static arrays

--- a/benchmark/Project.toml
+++ b/benchmark/Project.toml
@@ -14,4 +14,5 @@ IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 ODBC = "be6f12e9-ca4f-5eb2-a339-a4f995cc0291"
 Parsers = "69de0a69-1ddd-5017-9359-2bf0b02dc9f0"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 WRDSMerger = "59d27aa3-834e-4232-9046-52ef43e86786"
