--- a/benchmark/Project.toml
+++ b/benchmark/Project.toml
@@ -12,7 +12,9 @@ GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 InMemoryDatasets = "5c01b14b-ab03-46ff-b164-14c663efdd9f"
 IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 ODBC = "be6f12e9-ca4f-5eb2-a339-a4f995cc0291"
+OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Parsers = "69de0a69-1ddd-5017-9359-2bf0b02dc9f0"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 WRDSMerger = "59d27aa3-834e-4232-9046-52ef43e86786"
