--- a/Project.toml
+++ b/Project.toml
@@ -23,12 +23,12 @@ BusinessDays = "0.9"
 DataFrames = "1.2"
 IntervalSets = "0.5"
 PrettyTables = "1.3"
-ShiftedArrays = "1"
+Reexport = "1"
+ShiftedArrays = "1, 2"
 StatsBase = "0.33"
-julia = "1.6"
 StatsModels = "0.6"
 Tables = "1.7"
-Reexport = "1"
+julia = "1.6"
 
 [extras]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
