--- a/Project.toml
+++ b/Project.toml
@@ -22,9 +22,12 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 BusinessDays = "0.9"
 DataFrames = "1.2"
 IntervalSets = "0.5"
+OffsetArrays = "1.12"
 Reexport = "1"
+StaticArrays = "1.5"
 StatsBase = "0.33"
 StatsModels = "0.6"
+Tables = "1.7"
 julia = "1.6"
 
 [extras]
