--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "AbnormalReturns"
 uuid = "f9c80461-2ebf-4c7c-9c1c-d30d9d100fd8"
 authors = ["junder873 <junder873@gmail.com>"]
-version = "0.2.3"
+version = "0.3.0"
 
 [deps]
 BusinessDays = "4f18b42c-503e-5345-9536-bb0f25fc7038"
@@ -25,7 +25,7 @@ IntervalSets = "0.7"
 OffsetArrays = "1"
 Reexport = "1"
 StaticArrays = "1"
-StatsBase = "0.33"
+StatsBase = "0.33, 0.34"
 StatsModels = "0.7"
 Tables = "1"
 julia = "1.6"
