--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ IntervalSets = "0.7"
 OffsetArrays = "1"
 Reexport = "1"
 StaticArrays = "1"
+Statistics = "1"
 StatsBase = "0.33, 0.34"
 StatsModels = "0.7"
 Tables = "1"
